moved index.html to root dir

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <body>
     <main>
       <div id="splash">
-        <a href="onboarding.html"
+        <a href="./html-pages/onboarding.html"
           ><img
             src="https://res.cloudinary.com/dbfn5lnvx/image/upload/v1647608532/learnhtmlcss/my-bank/logo.png"
             width="250"
